# xcard

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: main.hpp  xcard.hpp
src/: demo.cpp  linear_search_demo.cpp  xcard.cpp  xcard_mt.cpp
tests/: CMakeLists.txt  cc.txt  xcard_tests.cpp
